myqtt: * [fix] More updates to explain how to do some tests with   the quick install manual..

--- a/doc/myqtt.css
+++ b/doc/myqtt.css
@@ -249,7 +249,7 @@ pre.fragment,div.fragment {
 }
 
 pre.fragment .stringliteral { 
-  color: #e9b96e;
+  color: #c9c9c9  !important;
 }
 
 pre.fragment .keyword { 
@@ -286,4 +286,8 @@ span.node {
 
 span.header { 
   color: #729fcf;
+}
+
+span.stringliteral { 
+  color: #fcaf3e;  !important;
 }
